--- a/index.html
+++ b/index.html
@@ -1,98 +1,120 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
-    <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>웹 프로그래밍의 꽃! 자바스크립트_제이쿼리를 활용한 다양한 효과적용</title>
-      <style>
-        *{margin:0px;padding:0px;}
-        body{
-          font-family: "맑은 고딕",arial,sans-serif;
-          font-size:12px;
-          color:#333333;
-          background:rgb(246, 246, 246);
-        }
-        h1, h2{ text-align:center;}
-        h1 img{width:160px;}
-        h2{line-height:40px;}
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>제이쿼리 애니메이트 응용_베스킨라빈스 상단헤더와 메인슬라이드</title>
+  <!-- 초기화 -->
+  <link rel="stylesheet" href="./css/reset.css" type="text/css">
+  <!-- 메인서식 -->
+  <link rel="stylesheet" href="./css/main.css" type="text/css">
+  <!-- 폰트어썸 주소 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
-        /* 테두리 선 */
-        .border01{
-          border-top:3px solid #e44d26;
-          border-bottom:3px solid #e44d26;
-        }
-        /* 제목 배경 */
-        .bgcolor01{background:#f16529;}
-        dl{text-indent:10px;}
-        dt{
-          font-size:14px;
-          color:#fff;
-          padding:12px 0px;
-          font-weight: bold;
-          border-bottom:1px solid #ffffff;
-        }
-        dd{ 
-          border-bottom:1px solid #cccccc;
-          text-indent:16px;
-        }
-        dd > a{
-          display:block;
-          font-size:13px;
-          line-height:40px;
-          color:#333333;
-          text-decoration:none;
-        }
-        dd > a:hover{
-          background-color:beige;
-        }
-        footer{
-          background-color:#5f5e5e;
-          color:#ffffff;
-          text-align:center;
-          line-height:50px;
-        }
-        footer > address{font-style:normal;}
-      </style>
-    </head>
-    <body>
-      <header>
-      <h1>웹 프로그래밍의 꽃! 자바스크립트_제이쿼리를 활용한 다양한 효과적용</h1>
-      </header>
+  <!-- 제이쿼리 라이브러리 -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <!-- 제이쿼리 ui라이브러리 -->
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-      <main>
-        <h2>자바스크립트</h2>
-        <section class="border01">
-          <dl>
-            <dt class="bgcolor01">1일차 - 수업제목</dt>
-            <dd>문서제목</dd>
-            <dd>문서제목</dd>
-          </dl>
+  <!-- 메인 제이쿼리 -->
+  <script src="./script/main.js"></script>
 
-          <dl>
-            <dt class="bgcolor01">2일차 - 제목, 문단, 인용문, 프리, 글자관련, 목록, 이미지</dt>
-            <dd><a href="./1130/01_heading.html" title="제목태그">제목태그</a></dd>
-            <dd><a href="./1130/02_paragraph.html" title="문단태그">문단태그</a></dd>
-            <dd><a href="./1130/03_blockquote.html" title="인용문태그">인용문태그</a></dd>
-            <dd><a href="./1130/04_pre.html" title="프리태그">프리태그</a></dd>
-            <dd><a href="./1130/05_txt.html" title="글자태그">글자관련태그</a></dd>
-            <dd><a href="./1130/06_list.html" title="목록태그">목록태그</a></dd>
-            <dd><a href="./1130/07_img.html" title="이미지태그">이미지태그</a></dd>
-            <dd><a href="./1130/exec01.html" title="서른의 연예">실습예제-서른의 연예</a></dd>
-          </dl>
-        </section>
-        <h2>제이쿼리</h2>
-        <section class="border01">
-        <dl>
-          <dt class="bgcolor01">1일차 제이쿼리 소개와 문법</dt>
-          <dd><a href="./20230106/1_jquery(소개와문법).html" title="">01_제이쿼리소개와 문법</a></dd>
-          <dd><a href="./20230106/02_제이쿼리 선택자와 css메소드 활용하기.html" title="">02_제이쿼리 선택자와 css메소드 활용하기</a></dd>
-          <dd><a href="./20230106/과제_제이쿼리 선택자 학습하기/과제물_제이쿼리 선택자 학습하기(기본선택자, 탐색, 속성).html" title="">03_선택자 실습예제</a></dd>
-        </dl>
-        </section>
-      </main>
+</head>
+<body>
+  <!-- 상단 헤더영역 -->
+  <header>
+    <div id="h_top">
+      <h1>
+        <a href="index.html" title="메인페이지로 바로가기">
+          <img src="./images/logo_baskinrobbins.png" alt="상단로고">
+        </a>
+      </h1>
+    </div>
 
-      <footer>
-        <address>Copyright&copy;2022 HTML5/CSS3 학습페이지 allrights reserved.</address>
-      </footer>
-    </body>
+    <div id="h_bottom">
+      <nav>
+        <ul class="lnb">
+          <li><a href="#" title="로그인">login</a></li>
+          <li><a href="#" title="회원가입">join</a></li>
+        </ul>
+        <ul class="gnb">
+          <li><a href="#" title="">flavor of the month</a>
+            <ul class="sub">
+              <li><a href="#" title="이달의 아이스크림">
+                <img src="./images/img_monthly_fom_220930.png" alt="이달의 제품">
+              </a></li>
+            </ul>
+          </li>
+          <li><a href="#" title="">menu</a>
+            <ul class="sub">
+              <li><a href="#" title="아이스크림">아이스크림</a></li>
+              <li><a href="#" title="아이크림케이크">아이크림케이크</a></li>
+              <li><a href="#" title="음료">음료</a></li>
+              <li><a href="#" title="커피">커피</a></li>
+              <li><a href="#" title="디저트">디저트</a></li>
+            </ul>
+          </li>
+          <li><a href="#" title="영양성분">영양 성분 및 알레르기</a>
+            <ul class="sub">
+              <li><a href="#" title="아이스크림">아이스크림</a></li>
+              <li><a href="#" title="음료">음료</a></li>
+              <li><a href="#" title="커피">커피</a></li>
+            </ul>
+          </li>
+
+          <li><a href="#" title="이벤트">event</a>
+            <ul class="sub">
+              <li><a href="#" title="진행중인 이벤트">진행중인 이벤트</a></li>
+              <li><a href="#" title="당첨자 발표">당첨자 발표</a></li>
+            </ul>
+          </li>
+
+          <li><a href="#" title="지점찾기">store</a>
+            <ul class="sub">
+              <li><a href="#" title="매장찾기">매장찾기</a></li>
+              <li><a href="#" title="고객센터">고객센터</a></li>
+              <li><a href="#" title="단체주문">단체주문</a></li>
+            </ul>
+          </li>
+
+          <li><a href="#" title="소개">about</a>
+            <ul class="sub">
+              <li><a href="#" title="공지사항">공지사항</a></li>
+              <li><a href="#" title="보도자료">보도자료</a></li>
+              <li><a href="#" title="채용정보">채용정보</a></li>
+              <li><a href="#" title="점포설개문의">점포설개문의</a></li>
+              <li><a href="#" title="contact us">contact us</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <!-- 메인콘텐츠 영역 -->
+  <main>
+    <!-- 메인슬라이드 -->
+    <article class="slide">
+      <ul>
+        <li><a href="#" title="">
+          <img src="./images/slide01.png" alt=""></a></li>
+        <li><a href="#" title="">
+          <img src="./images/slide02.png" alt=""></a></li>
+        <li><a href="#" title="">
+          <img src="./images/slide3.jpg" alt=""></a></li>
+        <li><a href="#" title="">
+          <img src="./images/slide4.jpg" alt=""></a></li>
+          <li><a href="#" title="">
+            <img src="./images/slide5.jpg" alt=""></a></li>
+      </ul>
+      <i class="fas fa-angle-left"></i>
+      <i class="fas fa-angle-right"></i>
+    </article>
+  </main>
+
+  <!-- 푸터영역 -->
+  <footer></footer>
+
+</body>
 </html>
